<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <groupId>de.ingrid</groupId>
    <artifactId>ingrid-releases-pom</artifactId>
    <version>6.0.0</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.ingrid.portal</groupId>
  <artifactId>ingrid-portal-project</artifactId>
  <packaging>pom</packaging>
  <version>6.0.0</version>
  <name>InGrid Portal</name>
  <description>This is the portal where documents can be searched through the iBus and new documents can be managed by
    the InGrid Editor.
  </description>

  <!-- ==================== Source Code Management ==================== -->
  <scm>
    <connection>scm:git:git@github.com:informationgrid/ingrid-portal.git</connection>
    <developerConnection>scm:git:git@github.com:informationgrid/ingrid-portal.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <!-- ==================== REPOSITORIES ==================== -->
  <repositories>
    <!-- Repo of parent pom needed, parent pom may not be installed locally yet -->
    <repository>
      <id>nexus</id>
      <name>Nexus Repo</name>
      <url>https://nexus.informationgrid.eu/repository/maven-public</url>
    </repository>
  </repositories>

  <!-- ==================== PROPERTIES ==================== -->
  <properties>
    <org.apache.portals.jetspeed.version>2.3.1</org.apache.portals.jetspeed.version>
    <mdek.version>6.0.0</mdek.version>
    <webmap-client.version>6.0.0</webmap-client.version>
    <ingrid-codelist-service.version>6.0.0</ingrid-codelist-service.version>
    <ingrid-utils.version>6.0.0</ingrid-utils.version>
    <log4j.version>2.19.0</log4j.version>
  </properties>

  <modules>
    <module>ingrid-portal-apps</module>
    <module>ingrid-portal-layout</module>
    <module>ingrid-portal-mdek</module>
    <module>ingrid-portal-base</module>
    <module>ingrid-portal-mdek-application</module>
    <module>ingrid-portal-distribution</module>
  </modules>

  <!-- ==================== DEPENDENCY MANAGEMENT ==================== -->
  <dependencyManagement>
    <dependencies>
      <!-- Problems with driver 5.1.6 on MySQL 5.6 -->
      <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>5.1.49</version>
      </dependency>
      <!-- JETSPEED -->
      <!-- Explicitly use jetspeed dependency management ! So we use the versions jetspeed uses ! -->
      <dependency>
        <groupId>org.apache.portals.jetspeed-2</groupId>
        <artifactId>jetspeed-2</artifactId>
        <version>${org.apache.portals.jetspeed.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>de.ingrid</groupId>
        <artifactId>ingrid-utils</artifactId>
        <version>${ingrid-utils.version}</version>
      </dependency>
      <!--
        Spring dependency is managed by org.apache.portals.jetspeed-2:jetspeed-2 and is
        set to version 3.2.9.RELEASE!!!
      -->
      <dependency>
        <groupId>de.ingrid</groupId>
        <artifactId>ingrid-codelist-service</artifactId>
        <version>${ingrid-codelist-service.version}</version>
      </dependency>
      <dependency>
        <groupId>de.ingrid</groupId>
        <artifactId>ingrid-portal-utils</artifactId>
        <version>6.0.0</version>
      </dependency>
      <dependency>
        <groupId>de.ingrid.mdek</groupId>
        <artifactId>ingrid-mdek-api</artifactId>
        <version>${mdek.version}</version>
      </dependency>
      <dependency>
        <groupId>de.ingrid.mdek</groupId>
        <artifactId>ingrid-mdek-services</artifactId>
        <version>${mdek.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-1.2-api</artifactId>
        <version>${log4j.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!-- ==================== DEPENDENCIES ==================== -->
  <dependencies>
    <!-- Provided Dependencies (e.g. needed in portal-base and portal-apps) -->
    <dependency>
      <groupId>org.apache.portals</groupId>
      <artifactId>portlet-api_2.1.0_spec</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.portals.jetspeed-2</groupId>
      <artifactId>jetspeed-api</artifactId>
      <!-- Set provided in top pom to avoid inclusion in webapp and problems with redundant classes ! -->
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.portals.pluto</groupId>
      <artifactId>pluto-container-api</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>3.0.2</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.portals.jetspeed-2</groupId>
      <artifactId>jetspeed-commons</artifactId>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <!-- ==================== Build Configuration ==================== -->
  <build>
    <finalName>ingrid-portal-project-${project.version}</finalName>
    <!-- <resources><resource><directory>src/main/resources</directory><excludes><exclude>*.xml</exclude><exclude>*.properties</exclude><exclude>*.bak</exclude></excludes></resource></resources>-->
    <plugins>
      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>4.35.1</version>
        <configuration>
          <activeRecipes>
            <recipe>org.openrewrite.java.spring.framework.UpgradeSpringFramework_5_3</recipe>
          </activeRecipes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-spring</artifactId>
            <version>4.29.0</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <skipAssembly>true</skipAssembly>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>**/*.properties</exclude>
            <exclude>**/*.json</exclude>
            <exclude>**/*.sql</exclude>
            <exclude>**/*.xml</exclude>
            <exclude>**/*.xsl</exclude>
            <exclude>**/*.apt</exclude>
            <exclude>**/main/resources/apache-tomcat/bin/*.sh</exclude>
            <exclude>**/highlight.js</exclude>
            <exclude>**/github.css</exclude>
          </excludes>
        </configuration>
      </plugin>

      <!-- Only extract installer in parent module -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <inherited>false</inherited>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <!-- the inherited plugin extracts the installer which must not be done by sub-modules -->
        <inherited>false</inherited>
      </plugin>


      <!--
        This plugin configures the git-flow for this project
      -->
      <plugin>
        <groupId>external.atlassian.jgitflow</groupId>
        <artifactId>jgitflow-maven-plugin</artifactId>
        <version>1.0-m5.1</version>
        <configuration>
          <defaultOriginUrl>https://github.com/informationgrid/ingrid-portal</defaultOriginUrl>
          <noDeploy>true</noDeploy>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jdeprscan-plugin</artifactId>
        <version>3.0.0-alpha-1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>docker</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.spotify</groupId>
            <artifactId>docker-maven-plugin</artifactId>
            <configuration>
              <skipDocker>true</skipDocker>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>license-maven-plugin</artifactId>
            <configuration>
              <failOnMissingHeader>true</failOnMissingHeader>
              <failOnNotUptodateHeader>true</failOnNotUptodateHeader>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>wagon-maven-plugin</artifactId>
            <configuration>
              <skip>true</skip>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
